--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
+    "apexcharts": "^3.15.0",
     "react": "^16.12.0",
+    "react-apexcharts": "^1.3.6",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
