--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.5.0",
     "axios": "^0.19.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.4",
