--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^6.5.0",
+    "@types/jquery": "^3.3.33",
     "axios": "^0.19.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.4",
