--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,14 @@
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-leaflet": "^2.5.0",
     "@types/react-router-dom": "^5.1.3",
     "apexcharts": "^3.15.0",
+    "leaflet": "^1.6.0",
     "react": "^16.12.0",
     "react-apexcharts": "^1.3.6",
     "react-dom": "^16.12.0",
+    "react-leaflet": "^2.6.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "typescript": "^3.7.4"
