--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "express-validator": "^6.3.1",
     "heroku-ssl-redirect": "0.0.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.7"
+    "mongoose": "^5.8.7",
+    "next": "^9.2.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
