--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "react-dom": "^16.13.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "@types/node": "^13.7.6",
+    "@types/react": "^16.9.23",
+    "nodemon": "^2.0.2",
+    "typescript": "^3.8.2"
   }
 }
