--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^6.5.0",
+    "apexcharts": "^3.16.0",
     "axios": "^0.19.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.4",
@@ -26,6 +27,7 @@
     "mongoose": "^5.8.7",
     "next": "^9.2.2",
     "react": "^16.13.0",
+    "react-apexcharts": "^1.3.6",
     "react-dom": "^16.13.0"
   },
   "devDependencies": {
